welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:5: error: not found: value retrun
		retrun (temps<=90 && temp>=60)
                ^