welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.code
def squirrelPlay(temp:Int, isSummer:Boolean):Boolean = {
	if (isSummer){
		return (temp<=100 && temp>=60)
	} else {
		retrun (temps<=90 && temp>=60)
	}
}
